# BemTool

./: CMakeLists.txt  README.md  build_and_test.sh  cylinder2d.cpp  load.sh  separate.sh  test3D.cpp
bemtool/: equations.hpp  tools.hpp
bemtool/mesh/: mesh.hpp
bemtool/miscellaneous/: eigen_wrap.hpp
bemtool/operator/: operator.hpp  rotating_helmholtz_fast_only.hpp  rotating_helmholtz_fast_op.hpp  rotating_helmholtz_op.hpp  rotating_helmholtz_singrem_op.hpp  rotating_helmholtz_singrem_real_op.hpp
bemtool/potential/: potential.hpp  rotating_helmholtz_fast_pot.hpp  rotating_helmholtz_singrem_pot.hpp  rotating_helmholtz_singrem_real_pot.hpp
rotation/: dielectric_cylinder.cpp  helpers.hpp  plot.py  plotting_pec.py  plotting_scaling.py
tests/: CMakeLists.txt  README.md  dielectric_cylinder.cpp  normal_derivative_G.cpp  pec_combined_tmfk_tesk.cpp  pec_cylinder.cpp  pec_cylinder_te_single_layer.cpp  pec_cylinder_test.cpp  pec_cylinder_tm_double_layer.cpp  plot.py  plotting_isocontour.py  plotting_results.py  plotting_scaling.py  plotting_stationary.py  rh_converges_to_he.cpp  rh_equals_he_nonrotating.cpp  rh_potential_converges_to_he.cpp  rotating_dielectric_scatter_2D.cpp  rotating_dielectric_scatter_2D_fast.cpp
